{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 109,
  "lineage": "c5dfb15b-3b22-92a5-e56d-d9ce20737f3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d97ef13c06b05a19",
            "arn": "arn:aws:ec2:us-east-2:909408495248:instance/i-0244bbfa4dc57962d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0244bbfa4dc57962d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_Richer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a5f8954d0065fa6",
            "private_dns": "ip-172-31-16-23.us-east-2.compute.internal",
            "private_ip": "172.31.16.23",
            "public_dns": "ec2-3-144-220-56.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.220.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c610d7bbfd1750ca",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_Richer"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-550bc128",
            "tags": {
              "Groups": "app",
              "Name": "var.instance_name",
              "Owner": "Richer-Lucien"
            },
            "tags_all": {
              "Groups": "app",
              "Name": "var.instance_name",
              "Owner": "Richer-Lucien"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0190c34bb8d72d799",
              "sg-0cf9f2eb0fd802d8d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_httpd_Richer",
            "aws_security_group.allow_ssh_Richer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_httpd_Richer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909408495248:security-group/sg-0190c34bb8d72d799",
            "description": "Allow HTTPD inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0190c34bb8d72d799",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_httpd_Richer",
            "name_prefix": "",
            "owner_id": "909408495248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_httpd_Richer"
            },
            "tags_all": {
              "Name": "allow_httpd_Richer"
            },
            "timeouts": null,
            "vpc_id": "vpc-a00c78cb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_Richer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909408495248:security-group/sg-0cf9f2eb0fd802d8d",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf9f2eb0fd802d8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_Richer",
            "name_prefix": "",
            "owner_id": "909408495248",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_Richer"
            },
            "tags_all": {
              "Name": "allow_ssh_Richer"
            },
            "timeouts": null,
            "vpc_id": "vpc-a00c78cb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}